Alteracao do cursor principal e nas animacoes hover

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </ul>
     </nav>
 
-    <figure class="pinguim">
+    <figure class="pinguim-box">
       <img class="pinguim" src="./images/pinguim.svg" alt="Pinguim">
     </figure>
   </footer>
